<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/popup_design"
    android:padding="5dp"
    android:orientation="vertical" >
    
    <Button android:id="@+id/button_todo_popup_delete"
        	android:paddingStart="50dp"
        	android:paddingEnd="50dp"
        	android:layout_marginBottom="4dp"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:background="@drawable/popup_button_design"
        	android:textColor="#ffffff"
        	android:text="@string/button_todo_popup_delete" />
    
    <Button android:id="@+id/button_todo_popup_archive"
        	android:paddingStart="50dp"
        	android:paddingEnd="50dp"
        	android:layout_marginBottom="4dp"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:background="@drawable/popup_button_design"
        	android:textColor="#ffffff"
        	android:text="@string/button_todo_popup_archive" />
    
    <Button android:id="@+id/button_todo_popup_email"
        	android:paddingStart="50dp"
        	android:paddingEnd="50dp"
        	android:layout_marginBottom="4dp"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:background="@drawable/popup_button_design"
        	android:textColor="#ffffff"
        	android:text="@string/button_todo_popup_email" />
        
    <Button android:id="@+id/button_todo_popup_cancel"
        	android:paddingStart="50dp"
        	android:paddingEnd="50dp"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:background="@drawable/popup_button_design"
        	android:textColor="#ffffff"
        	android:text="@string/button_todo_popup_cancel" />

</LinearLayout>
