<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/popup_design"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/text_popup_delete"
        	  android:paddingStart="10dp"
        	  android:paddingTop="10dp"
        	  android:paddingEnd="10dp"
        	  android:layout_width="wrap_content"
        	  android:layout_height="wrap_content"
        	  android:gravity="center_horizontal"
        	  android:textSize="19sp"
        	  android:textColor="#ffffff"
        	  android:text="@string/text_popup_delete"
        />
    <LinearLayout android:layout_width="wrap_content"
        	      android:layout_height="wrap_content"
        	      android:paddingStart="10dp"
        	      android:paddingEnd="10dp"
        	      android:paddingBottom="10dp"
        	      android:layout_marginTop="5dp"
        	      android:orientation="horizontal"
        >
        <Button android:id="@+id/button_popup_delete_delete"
            	android:layout_height="wrap_content"
            	android:layout_width="wrap_content"
            	android:layout_marginEnd="5dp"
            	android:background="@drawable/button_design"
        		android:textColor="#ffffff"
            	android:text="@string/button_popup_delete" 
            />
        <Button android:id="@+id/button_popup_delete_cancel"
            	android:layout_height="wrap_content"
            	android:layout_width="wrap_content"
            	android:layout_marginStart="5dp"
            	android:background="@drawable/button_design"
        		android:textColor="#ffffff"
            	android:text="@string/button_popup_cancel" 
            />  
    </LinearLayout>
    

</LinearLayout>
